--- a/docker/Dockerfile.executor
+++ b/docker/Dockerfile.executor
@@ -1,4 +1,4 @@
-# Dockerfile for Orchestrator Service
+# Dockerfile for Executor Worker Service
 FROM python:3.11-slim
 
 # Set working directory
@@ -19,7 +19,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY sdk/ ./sdk/
-COPY orchestrator/ ./orchestrator/
+COPY connectors/ ./connectors/
+COPY executor/ ./executor/
 
 # Add current directory to Python path
 ENV PYTHONPATH=/app:$PYTHONPATH
@@ -29,11 +30,11 @@ RUN useradd --create-home --shell /bin/bash app && chown -R app:app /app
 USER app
 
 # Expose metrics port
-EXPOSE 9090
+EXPOSE 9091
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:9090/metrics || exit 1
+    CMD curl -f http://localhost:9091/metrics || exit 1
 
-# Start the orchestrator service
-CMD ["python", "orchestrator/service.py"]
+# Start the executor worker
+CMD ["python", "executor/worker.py"]
