--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,11 @@ kafka-python>=2.0.2
 redis>=5.0.0
 structlog>=23.2.0
 httpx>=0.25.0
+prometheus-client>=0.19.0
+pydantic-settings>=2.0.0
+google-auth>=2.0.0
+google-auth-oauthlib>=1.0.0
+google-api-python-client>=2.0.0
+requests>=2.28.0
+boto3>=1.26.0
+botocore>=1.29.0
